<resources>
    <string name="default_notification_channel_id" translatable="false">KHIDMANOW</string>
    <string name="app_name" translatable="false">KhidmaNow</string>
    <string name="app_title">KhidmaNow</string>
    <string name="Rs">AED</string>
    <string name="facebook_app_id" translatable="false">2527691970879290</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2527691970879290</string>
    <string name="maps_key" translatable="false">AIzaSyBWi_EXzaQXv9fjf6AwYki7sI8_btueMmg</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="search_hint" translatable="false">Enter item keyword to search</string>
    <string name="ver_1_0" translatable="false">Ver 2.01</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="complain">Complain</string>
    <string name="close">Close</string>
    <string name="otp">Vendor PIN</string>
    <string name="reject">Reject</string>
    <string name="vendor">Call Vendor</string>
    <string name="cancel">Cancel Booking</string>
    <string name="please_rate_your_experience_with_the_vendor">Please rate your experience with the vendor</string>
    <string name="please_rate_your_experience_with_the_khidmanow">Please rate your experience with the KhidmaNow app</string>
    <string name="make_payment">Goto Payment</string>
    <string name="complain_hint">Describe the problem you are facing on the job recently completed by the service provider</string>
    <string name="complain_string">What is your Complain?</string>
    <string name="enter_few_lines_on_how_was_the_experience_with_the_vendor_were_you_satisfied_with_his_work_will_you_receommend_him_to_others">Enter few lines on how was the experience\nwith the vendor, were you satisfied\nwith his work. Will you recommend\nhim to others.</string>
    <string name="enter_few_lines_on_how_was_the_experience_with_the_khidmanow_were_you_satisfied_with_his_work_will_you_receommend_him_to_others">Enter few lines on how was the experience with the KhidmaNow app and its services, were you satisfied with the features, Do you want to recommend any new functionalities or improve the current ones. We will be glad to know your opinion</string>
    <string name="or">OR</string>
    <string name="login_with_primary_mobile">Login with Primary Mobile</string>
    <string name="_4_digit_pin">4 Digit PIN</string>
    <string name="login">Login</string>
    <string name="help_i_ve_forgotten_my_pin">Help! I\'ve Forgotten My PIN</string>
    <string name="register">Register</string>
    <string name="skip_for_now">Skip For Now</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number_91xxxxxxxxxx">Mobile Number (9715xxxxxxxx)</string>
    <string name="email_address">Email Address</string>
    <string name="new_4_digit_pin">New 4 Digit PIN</string>
    <string name="all_fields_are_required">*All Fields are required</string>
    <string name="accept_terms_amp_conditions"><![CDATA[Accept Terms & Conditions]]></string>
    <string name="continue_">Continue</string>
    <string name="thank_you">Thank You</string>
    <string name="thanks_for_login_via_facebook">Thanks for login via facebook, please add a mobile number and validate OTP and you are done.</string>
    <string name="please_enter_6_digit_sms_code">Please enter 6 digit SMS code sent to your mobile</string>
    <string name="_6_digit_sms_code">6 Digit SMS Code</string>
    <string name="validate">Validate</string>
    <string name="resend_validation_code">Resend Validation Code!</string>
    <string name="looking_for_handyman">Looking for Handyman or other services?</string>
    <string name="details">DETAILS</string>
    <string name="pricing">PRICING</string>
    <string name="inclusions">INCLUSIONS</string>
    <string name="provide_additional_info">Provide additional information (optional)</string>
    <string name="take_pictures">Take pictures to allow technician assess issue</string>
    <string name="next">NEXT</string>
    <string name="register_address">I want the service to be done at my registered location.</string>
    <string name="select_location">I want the service to be done at a new location.</string>
    <string name="which_address">Which address or location you want the service to be done. Please select one?</string>
    <string name="address_landmark">Address Landmark, Flat #, Floor...</string>
    <string name="select_appointment_slot">Select appointment slot</string>
    <string name="checkout">CHECKOUT</string>
    <string name="service_requirements">SERVICE REQUIREMENTS</string>
    <string name="confirm_booking">CONFIRM BOOKING</string>
    <string name="no_items">There are no items in the cart.</string>
    <string name="book_a_service">Book a Service</string>
    <string name="home">Home</string>
    <string name="offers">Offers</string>
    <string name="my_orders">My Orders</string>
    <string name="products">Products</string>
    <string name="account">Account</string>
    <string name="language_name">عربى</string>
    <string name="booking_history">Booking History</string>
    <string name="my_wallet">My Wallet</string>
    <string name="delete_account">Delete Account</string>
    <string name="my_vouchers">My Vouchers</string>
    <string name="my_notifications">My Notifications</string>
    <string name="change_profile">Change Profile</string>
    <string name="change_pin">Change PIN</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="ref_dashboard">Ref. Dashboard</string>
    <string name="f_a_q">F A Q</string>
    <string name="about_us">About Us</string>
    <string name="t_amp_c"><![CDATA[T & C]]></string>
    <string name="refund_policy">Refund Policy</string>
    <string name="data_privacy">Data Privacy</string>
    <string name="feedback">Feedback</string>
    <string name="referral_benefits">Referral Benefits</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="receive_newsletter">Receive newsletter and partner mailers</string>
    <string name="receive_offer">Receive Offer SMS from KhidmaNow and partners</string>
    <string name="save_settings">Save Settings</string>
    <string name="settings_acknoeled">Settings changes acknowledgement</string>
    <string name="settings_changed">Your Settings changes are successful</string>
    <string name="title">title</string>
    <string name="message">message</string>
    <string name="balance">Balance</string>
    <string name="no_transaction">There are no transaction in the wallet</string>
    <string name="no_bookings">There are no bookings currently available.</string>
    <string name="please_enter_current_4_digit_pin">Please enter current 4 digit PIN</string>
    <string name="current_4_digit_pin">Current 4 digit PIN</string>
    <string name="reset_pin">Reset PIN</string>
    <string name="please_set_a_new_4_digit_pin">Please set a new 4 Digit PIN</string>
    <string name="save_pin">Save PIN</string>
    <string name="new_pin_set">New PIN Set Successfully.</string>
    <string name="there_are_no_messages">There are no messages currently available in this section.</string>
    <string name="offer_vouchers"><![CDATA[Offers & Vouchers]]></string>
    <string name="offer_lookup">Offer Lookup</string>
    <string name="voucher_lookup">Voucher Lookup</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="save">Save</string>
    <string name="edit_image">Edit Image</string>
    <string name="mobile">Mobile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="not_disclosed">Not Disclosed</string>
    <string name="select_geolocation">Select GeoLocation</string>
    <string name="referral_benifits">Referral Benefits</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="refferel_dash">Referral Dashboard</string>
    <string name="referrals">Referrals</string>
    <string name="transactions_this_month">Transactions this month</string>
    <string name="refresh">Refresh</string>
    <string name="refund_cancellation"><![CDATA[Refund & Cancellation Policy]]></string>
    <string name="khidmanow_rating">KhidmaNow Rating</string>
    <string name="khidmanow_faq">KhidmaNow F A Q</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="i_want_to_provide">Oop\'s I want to provide Vendor Feedback</string>
    <string name="deals_and_offers"><![CDATA[Deals & Offers]]></string>
    <string name="booking_timeline">Booking Timeline</string>
    <string name="shop_mater">Shop Material</string>
    <string name="tap_lock_on_top_left_to_login">Tap Lock on top left to Login</string>
    <string name="hourly">Hourly</string>
    <string name="fixed">Fixed</string>
    <string name="assesment">Assesment</string>
    <string name="voucher_detail">Voucher Detail</string>
    <string name="there_are_no_items_currently">There are no items currently available in this section. Please try again later</string>
    <string name="easy_and_economical">Easy and Economical</string>
    <string name="book_our_services_in_the_easiest_way_possible_relax_and_let_our_trusted_service_providers_complete_the_task">Book our services in the easiest way possible. Relax and let our trusted service providers complete the task</string>
    <string name="privileged_customer_care">Privileged Customer Care</string>
    <string name="calling_is_more_easier_we_also_have_a_call_center_to_take_service_orders">Calling is more easier. We also have a Call Center to take service orders</string>
    <string name="great_offers">Great Offers</string>
    <string name="exciting_offers_available_for_service_bookings">Exciting offers available for service bookings</string>
    <string name="earn_money">Earn Money</string>
    <string name="we_pay_cash_for_every_successful_order_from_your_referral_tell_a_friend_and_be_rewarded">We pay cash for every successful order from your referral. Tell a friend and be rewarded</string>
    <string name="quality_services">Quality Services</string>
    <string name="we_offer_reliable_services_and_trustworthy_workmanship_we_want_what_is_right_for_you">We offer reliable services and trustworthy workmanship. We want what is right for you</string>
    <string name="you_need_to_set_your_location_so_that_our_service_providers_can_find_you_easily">You need to set your location so that our service providers can find you easily</string>
    <string name="your_device_location">Your device location services seems to be disabled, You need to enable location for KhidmaNow to work. Do you want to enable it?</string>
    <string name="select_requirements">Select Requirements</string>
    <string name="verify_order">Verify Order</string>
    <string name="booking_confirmation">Booking Confirmation</string>
    <string name="your_booking">Your booking #</string>
    <string name="placed_sucessfully">is placed successfully on</string>
    <string name="price">Price</string>
    <string name="date">Date:</string>
    <string name="order_ref">Order Ref.:</string>
    <string name="desc">Desc:</string>
    <string name="vendor_text">Vendor:</string>
    <string name="status">Status:</string>
    <string name="material_cost">Material Cost:</string>
    <string name="material_vat">Material VAT:</string>
    <string name="please_enter_4_digit_number_from_vendor">Please enter 4 digit number from Vendor</string>
    <string name="_4_digit_permission_code">4 Digit permission code</string>
    <string name="ok">OK</string>
    <string name="reviews">My Reviews</string>
    <string name="show_detail">Show detail</string>
    <string name="order_detail">Order Detail</string>
</resources>