<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ico_home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_offer"
        android:icon="@drawable/ico_offer"
        android:title="@string/offers" />

    <item
        android:id="@+id/nav_order"
        android:icon="@drawable/ico_order"
        android:title="@string/my_orders" />

    <!--<item
        android:id="@+id/nav_items"
        android:icon="@drawable/ico_barcode"
        android:title="@string/products" />-->

    <!--<item
        android:id="@+id/nav_items"
        android:icon="@drawable/ico_barcode"
        android:title="@string/vendor_" />-->

    <item
        android:id="@+id/nav_items"
        android:icon="@drawable/ico_barcode"
        android:title="@string/reviews" />

    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/ico_account"
        android:title="@string/account" />

</menu>