<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">

    <RelativeLayout
        android:id="@+id/line1h"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/date"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/orderdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:text="date"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/order_ref"
            android:textAlignment="textStart"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/ordernumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:text="order_number"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/desc"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/itemname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:text="item_name"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/line2h"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1h"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/status"
            android:textAlignment="textStart"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/orderstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:text="order_status"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/line3h"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2h"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/vendor_text"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/vendorname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:text="vendor name"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/price"
            android:textAlignment="textStart"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/priceamount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:text="price amount"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/material_cost"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/materialcharges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:text="material charges"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/line13h"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line3h"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/material_vat"
            android:textAlignment="textStart"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/materialgst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:text="material gst"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/line4h"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line13h"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/remarks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="remarks"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line5h"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line4h"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btncall"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:background="@color/colorButton"
            android:text="@string/vendor"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btncancel"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:background="@color/cancel"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnprofile"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:background="@color/profile"
            android:text="@string/vendor"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnotp"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:background="@color/request"
            android:text="@string/otp"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnreject"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:background="@color/reject"
            android:text="@string/reject"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnclose"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:background="@color/close"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btncomplain"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:background="@color/complain"
            android:text="@string/complain"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btninactive"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:background="@color/inactive" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_detail"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/profile"
        android:text="@string/show_detail"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</LinearLayout>