<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="layout.fr_settings">

    <include
        android:id="@+id/tbActivityMain"
        layout="@layout/toolbarsearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbActivityMain"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:padding="10dp"
        card_view:cardCornerRadius="0dp"
        card_view:contentPadding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <Switch
                android:id="@+id/switchnotification"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:text="@string/allow_notifications"
                android:textColor="@color/colorTextDark"
                android:textSize="12dp" />

            <Switch
                android:id="@+id/switchnewsletter"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/switchnotification"
                android:layout_marginTop="15dp"
                android:text="@string/receive_newsletter"
                android:textColor="@color/colorTextDark"
                android:textSize="12dp" />

            <Switch
                android:id="@+id/switchsms"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/switchnewsletter"
                android:layout_marginTop="15dp"
                android:text="@string/receive_offer"
                android:textColor="@color/colorTextDark"
                android:textSize="12dp" />

            <Button
                android:id="@+id/btnhome"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_below="@id/switchsms"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@color/colorButton"
                android:text="@string/save_settings"
                android:textColor="@color/white"
                android:textSize="14dp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar9"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />
</RelativeLayout>
